--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to my Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>CYSE 450 Summary Website</title>
+  </head>
+  
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">My Homepage</a>
+        <a class="navbar-brand" href="index.html">CYSE 450 Summary</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,29 +21,135 @@
       </nav>
   </header>
 
-<main class="container mt-4">
-    <h1>CYSE 450 Summary Website</h1> 
+  <main class="container mt-4">
+    <h1>CYSE 450 Summary Website</h1>
+    <p>This webpage provides a summary of the topics we learned during the Fall 2023 semester of CYSE 450: Ethical Hacking. </p>
+    <!-- Week 1 -->
     <section>
       <div class="row">
         <div class="col-md-6">
+          <h2>Week 1: Ethical Hacking, Networking Foundations</h2>
           <p>
-            This webpage provides a summary of the topics we learned during the Fall 2023 semester of CYSE 450: Ethical Hacking. 
+            In this module, we delved into the fundamentals of ethical hacking, exploring the methodologies employed in ethical hacking practices. Additionally, we covered networking foundations, focusing on understanding the essentials that form the basis of secure communication in a networked environment. The week also introduced us to the concept of footprinting and reconnaissance, crucial steps in ethical hacking.
           </p>
         </div>
       </div>
     </section>
+    <hr>
 
-  <section>
-    
-  </section>
-</main>
+    <!-- Week 2 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 2: Communication Model, Topology, TCP/UDP, IP</h2>
+          <p>
+            Week 2 centered around the communication model, network topology, and the protocols that enable communication over networks, such as TCP, UDP, and IP. The understanding of these concepts lays the foundation for effective network management and security.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 3 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 3: Open Source Intelligence, DNS, Passive Reconnaissance</h2>
+          <p>
+            Open Source Intelligence (OSINT) was the primary focus of this module, emphasizing the importance of gathering information from publicly available sources. We explored the Domain Name System (DNS) and engaged in passive reconnaissance techniques, essential for understanding potential vulnerabilities and threats.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 4 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 4: Scanning Networks, System Hacking, Vulnerability Scanning</h2>
+          <p>
+            This module covered the active phase of reconnaissance, including scanning networks, system hacking, and vulnerability scanning. Techniques such as ping sweeps and port scanning were discussed, along with methods for searching and exploiting vulnerabilities, gathering passwords, and post-exploitation strategies.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 5 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 5: Malware, Cryptography, Malware Analysis</h2>
+          <p>
+            In Week 5, our focus shifted to the realm of cybersecurity threats with a deep dive into malware. We explored various types of malware, the fundamentals of cryptography, and conducted malware analysis. Topics included basic encryption, symmetric and asymmetric key cryptography, PGP, and MIME.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 6 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 6: Sniffing Packet Analysis, Spoofing Attack</h2>
+          <p>
+            Week 6 concentrated on network sniffing, packet analysis, and the potential threats posed by spoofing attacks. Understanding these techniques is crucial for identifying and mitigating security risks in a networked environment.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 9 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 9: Social Engineering, Physical and Social Engineering</h2>
+          <p>
+            Social engineering, both physical and psychological, took the spotlight in Week 9. We delved into the art of manipulating individuals to gain unauthorized access and covered specific threats like phishing attacks, emphasizing the importance of human-centric cybersecurity defenses.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 10 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 10: Vulnerability Assessments, Attack and Defense</h2>
+          <p>
+            Week 10 focused on assessing vulnerabilities, understanding attack and defense strategies, and managing vulnerabilities effectively. Topics included vulnerability assessments, web application attacks, and denial of service attacks, providing a comprehensive view of the security landscape.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Week 12 -->
+    <section>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Week 12: Scripting and Penetration Testing</h2>
+          <p>
+            In the final week, we explored the intersection of scripting and penetration testing. The module covered scripting for penetration testing, including concepts such as variables, arrays, substitutions, input and output, error handling, and the role of coding in effective penetration testing.
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+  </main>
+
 
   <div class="container">
     <footer>
       <div>
-        <h2>Contact Me</h2>
+        <h2>Author</h2>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="mailto:nh.allen272@gmail.com">nh.allen272@gmail.com</a></li>
+          <li class="nav-item mb-2"><a href="mailto:nalle014@odu.edu">nalle014@odu.edu</a></li>
           <li>
             <a href="https://www.linkedin.com/in/na19/" target="_blank">LinkedIn</a> - My LinkedIn Profile
           </li>
@@ -51,7 +158,6 @@
       </div>
     </footer>  
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
