--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section>
       <div class="row">
         <div class="col-md-6">
-          <h2>Week 6: Sniffing Packet Analysis, Spoofing Attack</h2>
+          <h2>Week 6-8: Sniffing Packet Analysis, Spoofing Attack</h2>
           <p>
             Week 6 concentrated on network sniffing, packet analysis, and the potential threats posed by spoofing attacks. Understanding these techniques is crucial for identifying and mitigating security risks in a networked environment.
           </p>
