fixed weeks again

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-md-6">
           <h2>Week 6-8: Sniffing Packet Analysis, Spoofing Attack</h2>
           <p>
-            Week 6 concentrated on network sniffing, packet analysis, and the potential threats posed by spoofing attacks. Understanding these techniques is crucial for identifying and mitigating security risks in a networked environment.
+            Weeks 6-8 concentrated on network sniffing, packet analysis, and the potential threats posed by spoofing attacks. Understanding these techniques is crucial for identifying and mitigating security risks in a networked environment.
           </p>
         </div>
       </div>
@@ -119,9 +119,9 @@
     <section>
       <div class="row">
         <div class="col-md-6">
-          <h2>Week 10: Vulnerability Assessments, Attack and Defense</h2>
+          <h2>Week 10-11: Vulnerability Assessments, Attack and Defense</h2>
           <p>
-            Week 10 focused on assessing vulnerabilities, understanding attack and defense strategies, and managing vulnerabilities effectively. Topics included vulnerability assessments, web application attacks, and denial of service attacks, providing a comprehensive view of the security landscape.
+            Weeks 10-11 focused on assessing vulnerabilities, understanding attack and defense strategies, and managing vulnerabilities effectively. Topics included vulnerability assessments, web application attacks, and denial of service attacks, providing a comprehensive view of the security landscape.
           </p>
         </div>
       </div>
